test remove randomness

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ title: "Galeri"
       {% endfor %}
       </div>
       <script>
-        var div = document.querySelector('#randomness');
-        for (var i = div.children.length; i >= 0; i--) {
-            div.appendChild(div.children[Math.random() * i | 0]);
-        }
+        // var div = document.querySelector('#randomness');
+        // for (var i = div.children.length; i >= 0; i--) {
+        //     div.appendChild(div.children[Math.random() * i | 0]);
+        // }
       </script>
     </div>
 
