--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Galeri"
+title: "Gallery Painting"
 ---
 
 <!-- Gallery -->
@@ -11,7 +11,7 @@ title: "Galeri"
         <div class="card blue-grey darken-1">
           <div class="card-content white-text">
             <span class="card-title">Tentang</span>
-            <p>Galeri screenshoot dari beberapa game yang dimainkan oleh anggota komunitas Cleone.ID.</p>
+            <p>Galeri ini dengan bangga mempersembahkan karya-karya lukisan berbagai aliran dengan makna dan keistimewaan disetiap goresannya.</p>
           </div>
           <div class="card-action">
             <a class="modal-trigger" href="#modal-comment-section" ><i class="material-icons left">chat</i> Comment Group</a>
@@ -31,13 +31,13 @@ title: "Galeri"
             <div class="gallery-body">
               <div class="title-wrapper">
                 <h3>{{ post.title }}</h3>
-                <span class="price">{{ post.owner }} - {% include date.html date=post.date %}</span>
+                <span class="price">{{ post.artist }} - {% include date.html date=post.date %}</span>
               </div>
               <div class="description">
                 {{ post.content }}
               </div>
               <p class="description">
-                {{ post.owner }}
+                {{ post.artist }}
               </p>
               <p class="description">
                 {% include date.html date=post.date %}
@@ -51,10 +51,10 @@ title: "Galeri"
       {% endfor %}
       </div>
       <script>
-        // var div = document.querySelector('#randomness');
-        // for (var i = div.children.length; i >= 0; i--) {
-        //     div.appendChild(div.children[Math.random() * i | 0]);
-        // }
+        var div = document.querySelector('#randomness');
+        for (var i = div.children.length; i >= 0; i--) {
+            div.appendChild(div.children[Math.random() * i | 0]);
+        }
       </script>
     </div>
 
