--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Gallery Painting"
+title: "Galeri"
 ---
 
 <!-- Gallery -->
@@ -11,7 +11,7 @@ title: "Gallery Painting"
         <div class="card blue-grey darken-1">
           <div class="card-content white-text">
             <span class="card-title">Tentang</span>
-            <p>Galeri ini dengan bangga mempersembahkan karya-karya lukisan berbagai aliran dengan makna dan keistimewaan disetiap goresannya.</p>
+            <p>Skrinsut Cleone.</p>
           </div>
           <div class="card-action">
             <a class="modal-trigger" href="#modal-comment-section" ><i class="material-icons left">chat</i> Comment Group</a>
