--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ title: "Galeri"
             <div class="gallery-body">
               <div class="title-wrapper">
                 <h3>{{ post.title }}</h3>
-                <span class="price">{{ post.artist }} - {% include date.html date=post.date %}</span>
+                <span class="price">{{ post.owner }} - {% include date.html date=post.date %}</span>
               </div>
               <div class="description">
                 {{ post.content }}
               </div>
               <p class="description">
-                {{ post.artist }}
+                {{ post.owner }}
               </p>
               <p class="description">
                 {% include date.html date=post.date %}
