--- a/index.html
+++ b/index.html
@@ -23,12 +23,25 @@ title: "Galeri"
         <div id="{{ post.id_post }}-{{ post.slug }}" class="col l4 m6 s12 gallery-item gallery-expand gallery-filter {{ post.categories }}">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
-              <img class="responsive-img spotlight" src="{{ post.image }}" data-media="image" data-title="{{ post.title }}" data-src="{{ post.image }}" data-description="{{ post.description }} - {{ post.owner }}" alt="placeholder" crossOrigin="anonymous">
+                <img class="responsive-img spotlight" src="{{ post.image }}" data-media="image" data-title="{{ post.title }}" data-src="{{ post.image }}" data-description="{{ post.description }} - {{ post.owner }}" alt="placeholder" crossOrigin="anonymous">
             </a>
             <div class="gallery-header">
               <span>{{ post.title }}</span>
             </div>
             <div class="gallery-body">
+              <div class="title-wrapper">
+                <h3>{{ post.title }}</h3>
+                <span class="price">{{ post.owner }} - {% include date.html date=post.date %}</span>
+              </div>
+              <div class="description">
+                {{ post.content }}
+              </div>
+              <p class="description">
+                {{ post.owner }}
+              </p>
+              <p class="description">
+                {% include date.html date=post.date %}
+              </p>
             </div>
             <div class="gallery-action">
               <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
