--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: "Galeri"
         <div id="{{ post.id_post }}-{{ post.slug }}" class="col l4 m6 s12 gallery-item gallery-expand gallery-filter {{ post.categories }}">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
-                <img class="responsive-img spotlight" src="{{ post.image }}" data-media="image" data-title="{{ post.title }}" data-src="{{ post.image }}" data-description="{{ post.content }} - {{ post.owner }}" alt="placeholder" crossOrigin="anonymous">
+                <img class="responsive-img spotlight" src="{{ post.image }}" data-media="image" data-title="{{ post.title }}" data-src="{{ post.image }}" data-description="{{ post.description }} - {{ post.owner }}" alt="placeholder" crossOrigin="anonymous">
             </a>
             <div class="gallery-header">
               <span>{{ post.title }}</span>
