--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ title: "Galeri"
       <div class="col l4 m6 s12 gallery-item gallery-filter all">
         <div class="card blue-grey darken-1">
           <div class="card-content white-text">
-            <span class="card-title">Tentang</span>
-            <p>Skrinsut Cleone.</p>
+            <span class="card-title">About</span>
+            <p>Selamat datang di galeri komunitas Cleone.ID. Disini kita menyimpan beberapa momen dari game yang dimainkan di komunitas.</p>
           </div>
           <div class="card-action">
             <a class="modal-trigger" href="#modal-comment-section" ><i class="material-icons left">chat</i> Comment Group</a>
