--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: "Galeri"
             <a class="gallery-cover gray">
                 <img class="responsive-img spotlight" src="{{ post.image }}" data-media="image" data-title="{{ post.title }}" data-src="{{ post.image }}" data-description="{{ post.description }} - {{ post.owner }}" alt="placeholder" crossOrigin="anonymous">
             </a>
-            <div class="gallery-header">
+            <div class="gallery-header grey darken-4" style="color: #EAEAEA">
               <span>{{ post.title }}</span>
             </div>
             <div class="gallery-body">
