--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@ title: "Galeri"
         <div class="card blue-grey darken-1">
           <div class="card-content white-text">
             <span class="card-title">About</span>
-            <p>Selamat datang di galeri komunitas Cleone.ID. Disini kita menyimpan beberapa momen dari game yang dimainkan di komunitas.</p>
+            <p>Selamat datang di galeri komunitas Cleone.ID. Disini kita menyimpan beberapa momen dari game yang
+              dimainkan di komunitas.</p>
           </div>
           <div class="card-action">
-            <a class="modal-trigger" href="#modal-comment-section" ><i class="material-icons left">chat</i> Comment Group</a>
+            <a class="modal-trigger" href="#modal-comment-section"><i class="material-icons left">chat</i> Comment
+              Group</a>
           </div>
         </div>
       </div>
       <div id="randomness">
-      {% for post in site.posts %}
+        <!-- {% for post in site.posts %}
         <div id="{{ post.id_post }}-{{ post.slug }}" class="col l4 m6 s12 gallery-item gallery-expand gallery-filter {{ post.categories }}">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
@@ -48,13 +50,60 @@ title: "Galeri"
             </div>
           </div>
         </div>
-      {% endfor %}
+      {% endfor %} -->
+        <script>
+          fetch('https://cdn.cleone.id/gallery.json')
+            .then(response => response.json())
+            .then(data => {
+              const container = document.getElementById('randomness');
+
+              data.forEach((item, index) => {
+                const div = document.createElement('div');
+                div.className = `col l4 m6 s12 gallery-item gallery-expand gallery-filter all`;
+                div.innerHTML = `
+                <div class="gallery-curve-wrapper">
+                  <a class="gallery-cover gray">
+                      <img class="responsive-img spotlight" 
+                           src="${item.url}" 
+                           data-media="image"
+                           data-src="${item.url}" 
+                           data-description="${item.caption} - ${item.username}" 
+                           alt="cleone-gallery-image" crossOrigin="anonymous">
+                  </a>
+                  <div class="gallery-header grey darken-4" style="color: #EAEAEA">
+                    <span>${item.caption}</span>
+                  </div>
+                  <div class="gallery-body">
+                    <div class="title-wrapper">
+                      <h3>${item.caption}</h3>
+                      <span class="price">${item.username}</span>
+                    </div>
+                    <div class="description">
+                      ${item.caption}
+                    </div>
+                    <p class="description">${item.username}</p>
+                  </div>
+                  <div class="gallery-action">
+                    <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
+                  </div>
+                </div>
+              `;
+                container.appendChild(div);
+              });
+
+              // Shuffle elements
+              for (var i = container.children.length; i >= 0; i--) {
+                container.appendChild(container.children[Math.random() * i | 0]);
+              }
+            })
+            .catch(error => console.error("Failed to load gallery:", error));
+        </script>
       </div>
       <script>
-        var div = document.querySelector('#randomness');
-        for (var i = div.children.length; i >= 0; i--) {
-            div.appendChild(div.children[Math.random() * i | 0]);
-        }
+        // var div = document.querySelector('#randomness');
+        // for (var i = div.children.length; i >= 0; i--) {
+        //   div.appendChild(div.children[Math.random() * i | 0]);
+        // }
       </script>
     </div>
 
