change image source

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@ title: "Galeri"
                       <img class="responsive-img spotlight" 
                            src="${item.url}" 
                            data-media="image"
+                           data-title="${item.caption}"
                            data-src="${item.url}" 
-                           data-description="${item.caption} - ${item.username}" 
+                           data-description="- ${item.username}" 
                            alt="cleone-gallery-image" crossOrigin="anonymous">
                   </a>
                   <div class="gallery-header grey darken-4" style="color: #EAEAEA">
