--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: "Galeri"
                            data-title="${item.caption}"
                            data-src="${item.url}" 
                            data-description="${item.username}" 
-                           alt="cleone-gallery-image" crossOrigin="anonymous">
+                           alt="Galeri Cleone.ID" crossOrigin="anonymous">
                   </a>
                   <div class="gallery-header grey darken-4" style="color: #EAEAEA">
                     <span>${item.caption}</span>
